--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -154,4 +154,4 @@ jobs:
 
                # Terraform Apply
                - name: Terraform Apply
-                 run: terraform destroy
+                 run: terraform destroy -auto-approve
