--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -14,116 +14,116 @@ permissions:
      id-token: write
 
 jobs:
-     # terraform-plan:
-     #      name: Terraform Plan
-     #      runs-on: ubuntu-latest
-     #      environment: development
+     terraform-plan:
+          name: Terraform Plan
+          runs-on: ubuntu-latest
+          environment: development
 
-     #      env:
-     #           #this is needed since we are running terraform with read-only permissions
-     #           ARM_SKIP_PROVIDER_REGISTRATION: true
-     #      outputs:
-     #           tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
+          env:
+               #this is needed since we are running terraform with read-only permissions
+               ARM_SKIP_PROVIDER_REGISTRATION: true
+          outputs:
+               tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
 
-     #      steps:
-     #           # Checkout the repository to the GitHub Actions runner
-     #           - name: Checkout
-     #             uses: actions/checkout@v3
+          steps:
+               # Checkout the repository to the GitHub Actions runner
+               - name: Checkout
+                 uses: actions/checkout@v3
 
-     #           # Install the latest version of the Terraform CLI
-     #           - name: Setup Terraform
-     #             uses: hashicorp/setup-terraform@v2
-     #             with:
-     #                  terraform_wrapper: false
+               # Install the latest version of the Terraform CLI
+               - name: Setup Terraform
+                 uses: hashicorp/setup-terraform@v2
+                 with:
+                      terraform_wrapper: false
 
-     #           - name: Configure AWS credentials
-     #             id: aws-credentials
-     #             uses: aws-actions/configure-aws-credentials@v1-node16
-     #             with:
-     #                  # Use GitHub OIDC provider
-     #                  role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
-     #                  aws-region: ${{ secrets.AWS_REGION }}
+               - name: Configure AWS credentials
+                 id: aws-credentials
+                 uses: aws-actions/configure-aws-credentials@v1-node16
+                 with:
+                      # Use GitHub OIDC provider
+                      role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+                      aws-region: ${{ secrets.AWS_REGION }}
 
-     #           # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-     #           - name: Terraform Init
-     #             run: terraform init
+               # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+               - name: Terraform Init
+                 run: terraform init
 
-     #           # Checks that all Terraform configuration files adhere to a canonical format
-     #           # Will fail the build if not
-     #           - name: Terraform Format
-     #             run: terraform fmt -check
+               # Checks that all Terraform configuration files adhere to a canonical format
+               # Will fail the build if not
+               - name: Terraform Format
+                 run: terraform fmt -check
 
-     #           # Generates an execution plan for Terraform
-     #           # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-     #           - name: Terraform Plan
-     #             id: tf-plan
-     #             run: |
-     #                  export exitcode=0
-     #                  terraform plan  -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+               # Generates an execution plan for Terraform
+               # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
+               - name: Terraform Plan
+                 id: tf-plan
+                 run: |
+                      export exitcode=0
+                      terraform plan  -detailed-exitcode -no-color -out tfplan || export exitcode=$?
 
-     #                  echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+                      echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
 
-     #                  if [ $exitcode -eq 1 ]; then
-     #                    echo Terraform Plan Failed!
-     #                    exit 1
-     #                  else
-     #                    exit 0
-     #                  fi
+                      if [ $exitcode -eq 1 ]; then
+                        echo Terraform Plan Failed!
+                        exit 1
+                      else 
+                        exit 0
+                      fi
 
-     #           # Save plan to artifacts
-     #           - name: Publish Terraform Plan
-     #             uses: actions/upload-artifact@v3
-     #             with:
-     #                  name: tfplan
-     #                  path: tfplan
+               # Save plan to artifacts
+               - name: Publish Terraform Plan
+                 uses: actions/upload-artifact@v3
+                 with:
+                      name: tfplan
+                      path: tfplan
 
-     #           # Create string output of Terraform Plan
-     #           - name: Create String Output
-     #             id: tf-plan-string
-     #             run: |
-     #                  TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+               # Create string output of Terraform Plan
+               - name: Create String Output
+                 id: tf-plan-string
+                 run: |
+                      TERRAFORM_PLAN=$(terraform show -no-color tfplan)
 
-     #                  delimiter="$(openssl rand -hex 8)"
-     #                  echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-     #                  echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
-     #                  echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-     #                  echo "" >> $GITHUB_OUTPUT
-     #                  echo '```terraform' >> $GITHUB_OUTPUT
-     #                  echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-     #                  echo '```' >> $GITHUB_OUTPUT
-     #                  echo "</details>" >> $GITHUB_OUTPUT
-     #                  echo "${delimiter}" >> $GITHUB_OUTPUT
+                      delimiter="$(openssl rand -hex 8)"
+                      echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+                      echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+                      echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+                      echo "" >> $GITHUB_OUTPUT
+                      echo '```terraform' >> $GITHUB_OUTPUT
+                      echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+                      echo '```' >> $GITHUB_OUTPUT
+                      echo "</details>" >> $GITHUB_OUTPUT
+                      echo "${delimiter}" >> $GITHUB_OUTPUT
 
-     #           # Publish Terraform Plan as task summary
-     #           - name: Publish Terraform Plan to Task Summary
-     #             env:
-     #                  SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-     #             run: |
-     #                  echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+               # Publish Terraform Plan as task summary
+               - name: Publish Terraform Plan to Task Summary
+                 env:
+                      SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
+                 run: |
+                      echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
 
-     #           # If this is a PR post the changes
-     #           - name: Push Terraform Output to PR
-     #             if: github.ref != 'refs/heads/dev'
-     #             uses: actions/github-script@v6
-     #             env:
-     #                  SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
-     #             with:
-     #                  github-token: ${{ secrets.GITHUB_TOKEN }}
-     #                  script: |
-     #                       const body = `${process.env.SUMMARY}`;
-     #                       github.rest.issues.createComment({
-     #                           issue_number: context.issue.number,
-     #                           owner: context.repo.owner,
-     #                           repo: context.repo.repo,
-     #                           body: body
-     #                       })
+               # If this is a PR post the changes
+               - name: Push Terraform Output to PR
+                 if: github.ref != 'refs/heads/dev'
+                 uses: actions/github-script@v6
+                 env:
+                      SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
+                 with:
+                      github-token: ${{ secrets.GITHUB_TOKEN }}
+                      script: |
+                           const body = `${process.env.SUMMARY}`;
+                           github.rest.issues.createComment({
+                               issue_number: context.issue.number,
+                               owner: context.repo.owner,
+                               repo: context.repo.repo,
+                               body: body
+                           })
 
      terraform-apply:
           name: Terraform Apply
           if: github.ref == 'refs/heads/dev' && needs.terraform-plan.outputs.tfplanExitCode == 2
           runs-on: ubuntu-latest
           environment: development
-          # needs: [terraform-plan]
+          needs: [terraform-plan]
 
           steps:
                # Checkout the repository to the GitHub Actions runner
