--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -55,7 +55,7 @@ jobs:
 
                # Generates an execution plan for Terraform
                # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-               - name: Terraform Plan
+               - name: Terraform Plan -lock=false
                  id: tf-plan
                  run: |
                       export exitcode=0
